@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.6])
-AC_INIT([oml2], [2.3.0], [http://www.mytestbed.net/projects/oml/issues/new])
+AC_INIT([oml2], [2.3.1], [http://www.mytestbed.net/projects/oml/issues/new])
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_HEADERS([config.h])
